# cbake

./: README.md  pyproject.toml
cbake/: __init__.py  cli.py  config.py  exceptions.py  workdir.py
cbake/schema/: instance.py  project.py  settings.py
